@@ -1,0 +1,14 @@
+# $NetBSD: Makefile,v 1.1 2019/08/09 15:43:47 brook Exp $
+
+R_PKGNAME=	DEoptimR
+R_PKGVER=	1.0-8
+CATEGORIES=	math
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+COMMENT=	Differential evolution optimization in pure R
+LICENSE=	gnu-gpl-v2 OR gnu-gpl-v3
+
+USE_LANGUAGES=	# none
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
