@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3325 2019/08/09 15:42:02 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3326 2019/08/09 15:43:47 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5449,3 +5449,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added graphics/R-latex2exp version 0.4.0 [brook 2019-08-09]
 	Added finance/R-bayesm version 3.1.3 [brook 2019-08-09]
 	Added math/R-energy version 1.7.6 [brook 2019-08-09]
+	Added math/R-DEoptimR version 1.0.8 [brook 2019-08-09]
